<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feedFragment"
        android:contentDescription="@string/content_description_recipes"
        android:icon="@drawable/ic_food_24dp"
        android:title="@string/allrecpies"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newRecipeFragment"
        android:contentDescription="@string/content_description_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoritesRecipeFragment"
        android:contentDescription="@string/content_description_favorites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />


</menu>