<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true">

        <!-- Chips can be declared here, or added dynamically. -->

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEuropean"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/EUROPEAN" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAsian"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ASIAN" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chipPanAsia"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/PANASIA" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chipEastern"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/EASTERN" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAmerican"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/AMERICAN" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRussian"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RUSSIAN" />



        <com.google.android.material.chip.Chip
            android:id="@+id/chipMediterranean"
            style="@style/Widget.AppTheme.MyChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/MEDITERRANEAN" />


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"

        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/card_recipe" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        android:scaleType="fitXY">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/notFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="visible"
            android:scaleType="fitXY"
            tools:srcCompat="@drawable/recipe_not_found"/>
    </ScrollView>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeFiltersButtonImageView"
        style="@style/Widget.AppTheme.MyBookmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/common_spacing_16dp"
        android:layout_marginEnd="@dimen/common_spacing_16dp"
        android:layout_marginBottom="@dimen/common_spacing_24dp"
        android:text="@string/CloseFilters"
        android:textColor="@color/my_color_basic_dark_gray_day"
        android:visibility="gone"
        app:icon="@drawable/ic_close_24dp"
        app:iconTint="@color/my_color_basic_dark_gray_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>