<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/top_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="30dip"
            app:riv_tile_mode="clamp"
            tools:srcCompat="@drawable/book" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeTitleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyTextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/recipe_title"
            android:layout_marginTop="@dimen/common_spacing_16dp"
            android:singleLine="true"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            android:paddingEnd="@dimen/common_spacing_16dp"
            android:paddingStart="@dimen/common_spacing_16dp"
            app:layout_constraintTop_toBottomOf="@id/top_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeTitleEditText"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeAuthorLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyTextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/author_recipe"
            android:singleLine="true"
            app:errorEnabled="false"
            app:helperTextEnabled="true"
            android:paddingEnd="@dimen/common_spacing_16dp"
            android:paddingStart="@dimen/common_spacing_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeTitleLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeAuthorEditText"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyTextEditStyleCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_24dp"
            android:paddingEnd="@dimen/common_spacing_16dp"
            android:paddingStart="@dimen/common_spacing_16dp"
            android:hint="@string/category_menu"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/recipeAuthorLayout">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeContentLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyTextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_24dp"
            android:hint="@string/recipe_content"
            app:errorEnabled="true"
            android:paddingEnd="@dimen/common_spacing_16dp"
            android:paddingStart="@dimen/common_spacing_16dp"
            app:layout_constraintTop_toBottomOf="@id/category_menu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeContentEditText"
                android:layout_width="match_parent"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addImageButton"
            android:layout_marginEnd="@dimen/common_spacing_16dp"
            android:layout_marginStart="@dimen/common_spacing_16dp"
            style="@style/Widget.AppTheme.MyBookmarkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_image"
            android:text="@string/add_image"
            app:icon="@drawable/ic_add_image24"
            app:layout_constraintTop_toBottomOf="@id/recipeContentLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveRecipeButton"
            style="@style/Widget.AppTheme.MyBookmarkButton"
            android:layout_marginEnd="@dimen/common_spacing_16dp"
            android:layout_marginStart="@dimen/common_spacing_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_image"
            android:ellipsize="end"
            android:text="@string/save_recipe"
            app:icon="@drawable/ic_save_24dp"
            app:layout_constraintTop_toBottomOf="@id/addImageButton"
            app:layout_constraintStart_toStartOf="@id/addImageButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>