<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">


            <ImageView
                android:id="@+id/previewImageImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/noimage2"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:background="@color/my_teal_700"
            android:clipToPadding="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:menu="@menu/favorites_menu"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Widget.Material3.PopupMenu.ListPopupWindow"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:layout_marginEnd="@dimen/common_spacing_16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_title"
                    android:textColor="@color/my_color_basic_dark_gray_day"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/author_recipe"
                    android:textColor="@color/my_color_basic_dark_gray_day"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/category_menu"
                    android:textColor="@color/my_color_basic_dark_gray_day"
                    android:textSize="16sp" />

            </LinearLayout>

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <!--<include layout="@layout/content_scrolling" />-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing_16dp"
            android:text="@string/recipe_content" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>